# Galaktic

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json  runSandbox.bat
docs/: icon_references.pur
example/Sandbox/: main.cpp
examples/sandbox/: main.cpp
include/: Galaktic.h  pch.hpp
include/audio/: gkc_audio.h
include/config/: gkc_config.h
include/core/: gkc_app.h  gkc_clock.h  gkc_debugger.h  gkc_error.h  gkc_exception.h  gkc_logger.h  gkc_main.h  gkc_scene.h
include/core/events/: gkc_dispatcher.h  gkc_event.h
include/core/helpers/: gkc_animation_helper.h  gkc_ecs_helper.h  gkc_texture_helper.h
include/core/managers/: gkc_animation_man.h  gkc_audio_man.h  gkc_ecs_man.h  gkc_entity_man.h  gkc_scene_man.h  gkc_script_man.h  gkc_texture_man.h  gkc_window_man.h
include/core/systems/: gkc_camera_system.h  gkc_ecs_event_system.h  gkc_key.h  gkc_mouse_system.h  gkc_movement_system.h  gkc_physics_system.h  gkc_script_system.h  gkc_system.h  gkc_ui_system.h  gkc_window_system.h
include/ecs/: gkc_component_registry.h  gkc_components.h  gkc_entity.h  gkc_registry.h  gkc_template_traits.h
include/filesys/: gkc_filesys.h  gkc_reader.h  gkc_writer.h
include/graphics/: gkc_renderer.h  gkc_window.h
include/render/: gkc_animation.h  gkc_drawer.h  gkc_texture.h  gkc_window.h
include/script/: gkc_library.h  gkc_script.h
src/audio/: gkc_audio.cpp
src/config/: gkc_config.cpp
src/core/: gkc_app.cpp  gkc_clock.cpp  gkc_debugger.cpp  gkc_error.cpp  gkc_exception.cpp  gkc_logger.cpp  gkc_main.cpp  gkc_scene.cpp
src/core/helpers/: gkc_animation_helper.cpp  gkc_ecs_helper.cpp  gkc_texture_helper.cpp
src/core/managers/: gkc_animation_man.cpp  gkc_audio_man.cpp  gkc_esc_man.cpp  gkc_scene_man.cpp  gkc_script_man.cpp  gkc_texture_man.cpp  gkc_window_man.cpp
src/core/systems/: gkc_camera_system.cpp  gkc_ecs_event_system.cpp  gkc_key.cpp  gkc_mouse_system.cpp  gkc_movement_system.cpp  gkc_physics_system.cpp  gkc_script_system.cpp  gkc_ui_system.cpp  gkc_window_system.cpp
src/ecs/: gkc_component_registry.cpp
src/filesys/: gkc_filesys.cpp  gkc_reader.cpp  gkc_writer.cpp
src/graphics/: gkc_renderer.cpp  gkc_window.cpp
src/render/: gkc_animation.cpp  gkc_drawer.cpp  gkc_texture.cpp  gkc_window.cpp
src/script/: gkc_library.cpp  gkc_script.cpp
